Fixed PostgreSQL apidb COPY files to include changeset id.
Fixed the Windows launcher batch file to contain all libraries.
Added a --read-replication-interval task.
Updated XML writing tasks to ignore UTF-8 characters not supported by XML.
Included new Xerces XML library to provide proper support for UTF-16 surrogate pairs.
Added a --merge-replication-files task.

0.31
Added a --remove-tags task.
Added JPF plugin support.
Updated the build scripts to use Ivy dependency management.
Added mutable entity support.
Added writeable dataset support.
Added apidb tasks that support both mysql and postgresql api databases.
Added a new --append-change task for combining full history changesets.

0.30
Added 0.6 support.
Enhanced the pgsql tasks and schema to support an optional "action" table.
Enhanced the pgsql schema to introduce a stored procedure called during every changeset application.
Enhanced the pgsql schema to include optional bbox and linestring columns on the way table.
Added ability to specify slipping map zoom and coordinates as arguments to the bounding box filter.
Added an "inMemoryBbox" to the pgsql writer task allowing it to calculate bounding boxes using a memory mapped file.
Added an automatic VACUUM ANALYZE of the database for pgsql writer and truncation tasks.
Added migration tasks --migrate and --migrate-change allowing 0.5 data to be converted to 0.6 format.
Added forceUtf8 and profileSql options to all MySQL tasks.
Added a --tag-sort task allowing tags within entities to be sorted alphabetically (0.6 only).
Enhanced the buffer tasks to chunk objects passed (chunks are 1/4 of max buffer size) to minimise thread synchronisation (0.6 only).
Dropped the default buffer size from 100 to 20 which provides slightly improved performance in most cases (0.6 only).
Added the ability to generate full history changesets, as opposed to changesets with a single change per entity (0.6 only).
Added a new allowIncorrectSchemaVersion option to most database tasks.