@@ -1,0 +1,96 @@
+<?xml version='1.0' encoding='UTF-8'?>
+<osmChange version="0.6" generator="Osmosis %VERSION%">
+  <!-- All combinations beginning with create. -->
+  <create>
+    <node id="1" version="1" timestamp="2008-01-02T03:04:05Z" uid="10" user="user10" lat="-1" lon="-2">
+      <tag k="created_by" v="Me1"/>
+    </node>
+  </create>
+  <create>
+    <node id="1" version="2" timestamp="2008-01-02T03:04:06Z" uid="10" user="user10" lat="-1" lon="-2">
+      <tag k="created_by" v="Me1"/>
+    </node>
+  </create>
+  <create>
+    <node id="2" version="1" timestamp="2008-01-02T03:04:05Z" uid="10" user="user10" lat="-1" lon="-2">
+      <tag k="created_by" v="Me1"/>
+    </node>
+  </create>
+  <modify>
+    <node id="2" version="2" timestamp="2008-01-02T03:04:06Z" uid="10" user="user10" lat="-1" lon="-2">
+      <tag k="created_by" v="Me1"/>
+    </node>
+  </modify>
+  <create>
+    <node id="3" version="1" timestamp="2008-01-02T03:04:05Z" uid="10" user="user10" lat="-1" lon="-2">
+      <tag k="created_by" v="Me1"/>
+    </node>
+  </create>
+  <delete>
+    <node id="3" version="2" timestamp="2008-01-02T03:04:06Z" uid="10" user="user10" lat="-1" lon="-2">
+      <tag k="created_by" v="Me1"/>
+    </node>
+  </delete>
+  <!-- All combinations beginning with modify. -->
+  <modify>
+    <node id="4" version="1" timestamp="2008-01-02T03:04:05Z" uid="10" user="user10" lat="-1" lon="-2">
+      <tag k="created_by" v="Me1"/>
+    </node>
+  </modify>
+  <create>
+    <node id="4" version="2" timestamp="2008-01-02T03:04:06Z" uid="10" user="user10" lat="-1" lon="-2">
+      <tag k="created_by" v="Me1"/>
+    </node>
+  </create>
+  <modify>
+    <node id="5" version="1" timestamp="2008-01-02T03:04:05Z" uid="10" user="user10" lat="-1" lon="-2">
+      <tag k="created_by" v="Me1"/>
+    </node>
+  </modify>
+  <modify>
+    <node id="5" version="2" timestamp="2008-01-02T03:04:06Z" uid="10" user="user10" lat="-1" lon="-2">
+      <tag k="created_by" v="Me1"/>
+    </node>
+  </modify>
+  <modify>
+    <node id="6" version="1" timestamp="2008-01-02T03:04:05Z" uid="10" user="user10" lat="-1" lon="-2">
+      <tag k="created_by" v="Me1"/>
+    </node>
+  </modify>
+  <delete>
+    <node id="6" version="2" timestamp="2008-01-02T03:04:06Z" uid="10" user="user10" lat="-1" lon="-2">
+      <tag k="created_by" v="Me1"/>
+    </node>
+  </delete>
+  <!-- All combinations beginning with delete. -->
+  <delete>
+    <node id="7" version="1" timestamp="2008-01-02T03:04:05Z" uid="10" user="user10" lat="-1" lon="-2">
+      <tag k="created_by" v="Me1"/>
+    </node>
+  </delete>
+  <create>
+    <node id="7" version="2" timestamp="2008-01-02T03:04:06Z" uid="10" user="user10" lat="-1" lon="-2">
+      <tag k="created_by" v="Me1"/>
+    </node>
+  </create>
+  <delete>
+    <node id="8" version="1" timestamp="2008-01-02T03:04:05Z" uid="10" user="user10" lat="-1" lon="-2">
+      <tag k="created_by" v="Me1"/>
+    </node>
+  </delete>
+  <modify>
+    <node id="8" version="2" timestamp="2008-01-02T03:04:06Z" uid="10" user="user10" lat="-1" lon="-2">
+      <tag k="created_by" v="Me1"/>
+    </node>
+  </modify>
+  <delete>
+    <node id="9" version="1" timestamp="2008-01-02T03:04:05Z" uid="10" user="user10" lat="-1" lon="-2">
+      <tag k="created_by" v="Me1"/>
+    </node>
+  </delete>
+  <delete>
+    <node id="9" version="2" timestamp="2008-01-02T03:04:06Z" uid="10" user="user10" lat="-1" lon="-2">
+      <tag k="created_by" v="Me1"/>
+    </node>
+  </delete>
+</osmChange>
